<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShareSDKSample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="share">分享</string>
    <string name="share_to_qq">分享到QQ好友</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_sina">分享到新浪微博</string>
    <string name="share_to_wechat">分享到微信好友</string>
    <string name="share_to_wechat_moments">分享到微信朋友圈</string>
    <string name="share_to_tencent_weibo">分享到腾讯微博</string>
    <string name="share_to_renren">分享到人人</string>
    <string name="share_to_douban">分享到豆瓣</string>
    <string name="login_to_wechat">微信登录</string>
    <string name="login_to_qq">QQ登录</string>
    <string name="login_to_sina">新浪微博登录</string>
    <string name="login_to_renren">人人登录</string>
    <string name="login_to_douban">豆瓣登录</string>

</resources>